# nabaztag

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  run_local.sh
apps/api/: .env.example  pyproject.toml  test_device_platform.py
apps/api/app/: config.py  dependencies.py  gateway.py  main.py  models.py  service.py  settings.py  store.py
apps/api/app/device_platform/: __init__.py  catalog.py  errors.py  mcp_server.py  models.py  router.py  service.py
apps/api/app/device_platform/adapters/: __init__.py  base.py  nabaztag_tag.py
apps/api/app/protocol/: client.py  commands.py  events.py  types.py
apps/macos_client/: README.md  app.py  build_dmg.sh  client_support.py  provisioning_support.py  pyproject.toml  qt_client.py  setup.py  test_provisioning_support.py
apps/macos_client/assets/: nabaztag.icns
apps/portal/: pyproject.toml  test_xmpp_dispatch.py
apps/portal/portal_app/: __init__.py  api_client.py  auth.py  connectors.py  device_protocol.py  extensions.py  main.py  models.py  pipelines.py  plugins.py  xmpp_dispatch.py  xmpp_server.py
apps/portal/portal_app/plugins/: __init__.py
apps/portal/portal_app/plugins/calendar/: handlers.py  plugin.json
apps/portal/portal_app/plugins/mail/: handlers.py  plugin.json
apps/portal/portal_app/plugins/spotify/: handlers.py  plugin.json
apps/portal/portal_app/plugins/use_cases/: handlers.py  plugin.json
apps/portal/portal_app/static/bundled-auto/: lapinou-tts-0190b85f5baf.mp3.performance.json  lapinou-tts-038e4ff1f4f6.mp3.performance.json  lapinou-tts-089161365498.mp3.performance.json  lapinou-tts-0a3c680d0da9.mp3.performance.json  lapinou-tts-0a423557230e.mp3.performance.json  lapinou-tts-0dab43fe1a44.mp3.performance.json  lapinou-tts-105ae500fe9d.mp3.performance.json  lapinou-tts-16cbaff0a15a.mp3.performance.json  lapinou-tts-17588ef27e73.mp3.performance.json  (+42 more)
apps/portal/portal_app/templates/: account.html  base.html  dashboard.html  index.html  mobile_pairing.html
apps/portal/scripts/: generate_birth_bundle.py  generate_choreography_bundle.py  write_performance_sidecars.py
(+57 files in other folders)
