[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nabaztag-api"
version = "0.1.0"
description = "FastAPI backend for Nabaztag primitives"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "gunicorn>=23.0,<24.0",
  "mcp>=1.26,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0"
]

[project.scripts]
nabaztag-device-platform-mcp = "app.device_platform.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
